Fixed menu bar spacing issue, updated readme, started work on the basic structure of the contact form

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -134,7 +134,7 @@ h1 span:last-child {
 
 /* Might need flex-wrap for mobile screens (think so). Also box 2 should shift to bottom when it wraps on mobile.
 Do I need flex-shrink? Not sure yet */
-/* shorthand - flex: 1 0 100px; = grow, shrink, basis*/
+/* shorthand - flex: 1 0 100px; = grow, shrink, basis */
 
 .flex-master {
     display: flex;
@@ -165,12 +165,7 @@ nav ul {
     
 }
 
-.one {
-    flex-basis: 100%;
-    height: 50%;
-}
-
-.two {
+.one .two {
     flex-basis: 100%;
     height: 50%;
 }
@@ -249,4 +244,64 @@ nav ul {
 
 img:hover + span {
     display: block;
+}
+
+/* Form */
+
+/* .contact-form {
+    My naming - do I need this? 
+} */
+
+.form-section {
+    /* clear: left;
+    background: ; */
+    background-size: cover;
+    background-position: center;
+    height: 900px;
+}
+
+.signup-form {
+    margin: 0 auto;
+    color: #fff;
+    background-color: rgb(182, 111, 119, .6); 
+    max-width: 400px;
+    border-radius: 15px;
+    /* position: absolute;
+    left: 10%;*/
+    padding:30px; 
+}
+
+.signup-form > h2 {
+    color: #fafafa;
+    margin-bottom: 20px;
+}
+
+.text-input {
+    background: transparent;
+    color: #fafafa;
+    width: 100%;
+    height: 25px;
+    margin: 5px 0 20px 0;
+    border: 1px solid #fafafa;
+    border-radius: 2px;
+}
+
+.text-input:hover {
+    border-color: #f16c6b;
+}
+
+.join-button {
+    margin-top: 20px;
+    border-radius: 2px;
+    padding: 15px 32px;
+    text-align: center;
+    font-size: 100%;
+    background-color: #f16c6b;
+    color: #fafafa;
+    display: block;
+}
+
+.join-button:hover {
+    background-color: #fafafa;
+    color: #f16c6b;
 }
